# corahbot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_macros.py  instructions.txt  resources.rc
backup/: bot.cpp  bot.hpp  gui.cpp  gui.hpp
data/markers/: 00_fighting.json  01_gear.json  01_gear_guildless.json  02_home.json  03_fake_login.json  03_login.json  04_refill_premium.json  05_map.json  07_app_closed.json  08_book.json  08_book_guildless.json  10_inventory.json  11_item_open.json  12_quest_reward.json  13_quests.json  14_abort_quest.json  15_system_stopped.json  16_refer_open.json  17_mob_info_open.json  18_encounter.json  19_fishing.json  20_pets.json  21_new_pets_found.json  22_cash_shop.json  23_cash_shop_item_open.json  23_underworld.json  24_portals.json  app_closed.json  app_crashed.json  atlas.json  disconnected.json  fighting.json  gear.json  inventory.json  item_open.json  locations.json  map.json  positions.json  potions_combat.json  potions_home.json  (+1 more)
psd/: potion_combat.psd  potion_home.psd  sword_btn.psd
src/: application.cpp  application.hpp  bot.cpp  bot.hpp  emulator.cpp  emulator.hpp  gui.cpp  gui.hpp  main.cpp  store.cpp  store.hpp  util.cpp  util.hpp  work_config.cpp  work_config.hpp
